# rag-deeep-learning

./: Makefile  main.py  pyproject.toml
.cursor/plans/: ragflow_deep_learning_plan_0fc00689.plan.md
app/: config.py
app/api/routes/: search.py
core/: chunker.py  embedder.py  indexer.py  searcher.py  tokenizer.py
docs/: PHASE1_HYBRID_SEARCH_GUIDE.md
models/: dtos.py  types.py
phase-1/: docker-compose.yml  pyproject.toml
phase-1/app/api/routes/: documents.py
phase-1/core/: reranker.py  searcher.py
phase-1/models/: types.py
phase-2/: docling-test.py  main.py  parsed-doc.json  pyproject.toml  scrape-output.html  scrape-output.json
phase-2/core/chunking/: chunker.py
phase-2/core/ingestion/: ingest.py
phase-2/core/ingestion/sources/: gdrive.py
phase-2/core/normalization/: normalizer.py
phase-2/core/parsers/: base.py  docling_parser.py  email.py  registry.py
phase-2/core/vectorstore/: parsed_index.py
phase-2/db/: metadata_store.py
phase-2/docs/: Phase-2-Parser.md
phase-2/models/: metadata.py  parsed.py
phase-3/: Makefile  main.py  pyproject.toml
phase-3/api/routes/: chat.py
phase-3/config/: config.py
phase-3/docs/: PHASE3_CONTEXT_NOTES.md  PHASE3_GENERATION_WITH_CITATIONS.md  generation-layer-design.md
phase-3/embedder/: embedder.py
phase-3/generation/: citation_inserter.py  context_packer.py  generator.py  llm_client.py  prompt_builder.py
phase-3/models/: dtos.py
phase-3/prompts/: citation_prompt.md  loader.py  system.md
phase-3/retrieval/: bridge.py
phase-3/test/: README.md  mock_chunks.json  test_cases.json
phase-3/test/outputs/: case_01_expected_answer.txt  case_02_expected_answer.txt  case_03_expected_answer.txt  case_03_stream_events.jsonl  case_04_expected_answer.txt
phase-3/test/prompts/: case_01_system_prompt.txt  case_02_system_prompt.txt  case_03_system_prompt.txt  case_04_system_prompt.txt
phase-3/test/requests/: case_01_request.json  case_02_request.json  case_03_request.json  case_04_request.json
phase-3/test/retrieval/: case_01_retrieved_chunks.json  case_02_retrieved_chunks.json  case_03_retrieved_chunks.json
phase-4/: Makefile  docker-compose.yml  main.py  pyproject.toml
phase-4/api/routes/: graphrag.py  query.py
phase-4/config/: config.py
phase-4/data/: README.md  build_request.json  chunks.json  entity_types.json  query_request.json  query_request_architecture.json  query_request_compliance.json  query_request_pricing.json  query_request_security.json  query_request_sla.json
phase-4/docs/: PHASE4_GRAPHRAG_GUIDE.md
phase-4/graph/: community.py  embedder.py  extractor.py  merge.py  prompts.py  resolve.py  search.py  store.py
phase-4/llm/: client.py
phase-4/models/: schemas.py
phase-4/retrieval-prompts/: 20260315T205506Z_what-compliance-certifications-and-audit-commitments-does-acme-have.json  README.md
phase-4/user-learning-notes/: PHASE4_LEARNING_NOTES.md
phase-5/: Makefile  main.py  pyproject.toml
phase-5/core/: db.py  enums.py  models.py  prompt_assembler.py  repositories.py
phase-5/data/: README.md  expected_search_results.json  forget_message_request.json  memory_create_multi_type.json  memory_create_raw_only.json  memory_update_small_fifo_limit.json  message_status_toggle_request.json  messages_add_batch.json  messages_recent_request.json  messages_search_requests.json  mock_llm_extraction_output.json  mock_queue_task_payload.json  prior_phase_context_outputs.json  seed_manifest.json
phase-5/docs/: PHASE5_MEMORY_SYSTEM_GUIDE.md
tests/: test-script.py  test_data.py
