[project]
name = "phase-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "chardet>=5.2.0",
    "fastapi>=0.128.0",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "html5lib>=1.1",
    "langchain-text-splitters>=1.1.0",
    "markdown-it-py>=4.0.0",
    "openpyxl>=3.1.5",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
]
