[project]
name = "phase-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "docling>=2.72.0",
    "fastapi>=0.128.0",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
    "transformers",
]
