[project]
name = "phase-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     # API
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",

    # LLM + token counting
    "openai>=1.50.0",
    "tiktoken>=0.7.0",

    # Elasticsearch (Graph store)
    "elasticsearch>=8.12.0",

    # Settings
    "pydantic-settings>=2.10.0",

    # Graph + community detection
    "networkx>=3.3",
    "python-louvain>=0.16",  # community detection (Leiden substitute)

    # Utils
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]
