[project]
name = "phase-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "elasticsearch[async]>=8.14.0,<9",
    "redis>=5.0.7",
    "openai>=1.40.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0",
]
